--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ input[type=text]{
     height: 40px;
     width: 50%;
 }
-a{
+.a{
     display: inline-block;
     background-color:#fff;
     color: #333;
@@ -46,7 +46,7 @@ a{
     flex-direction: row;
     flex-wrap: wrap;
 }
-a:hover{
+.a:hover{
     background-color: rgb(233, 231, 231);
     border-radius: 10px;
 
